Create ZeroDB NoSQL tables for Ocean Backend
- Created ocean_pages table with hierarchical structure support
- Created ocean_blocks table with vector embedding integration
- Created ocean_block_links table for bidirectional navigation
- Created ocean_tags table for content categorization
- Added setup_tables.py script with idempotent table creation
- Added comprehensive ZeroDB configuration to .env.example
- All tables include proper indexes for performance

Tables created:
- ocean_pages (12 fields, 4 indexes)
- ocean_blocks (13 fields, 5 indexes)
- ocean_block_links (6 fields, 4 indexes)
- ocean_tags (6 fields, 3 indexes)

Refs #2

--- a/.env.example
+++ b/.env.example
@@ -137,6 +137,43 @@ OPENAI_API_KEY=your_openai_api_key
 GITHUB_TOKEN=your_github_token
 
 # =============================================================================
+# ZeroDB Configuration (Ocean Backend - Issue #1)
+# =============================================================================
+# ZeroDB is AINative's serverless vector database with NoSQL tables,
+# file storage, and semantic search capabilities
+# Documentation: https://www.ainative.studio/zerodb
+
+# API Configuration
+ZERODB_API_URL=https://api.ainative.studio
+ZERODB_API_KEY=your_zerodb_api_key_here
+
+# Project Configuration
+# Get this after creating your project via ZeroDB MCP tools or dashboard
+ZERODB_PROJECT_ID=your_project_id_here
+
+# Embeddings Configuration
+# Ocean uses BAAI/bge-base-en-v1.5 for FREE embeddings (768 dimensions)
+# Alternative: text-embedding-3-small (OpenAI, 1536 dims, costs money)
+OCEAN_EMBEDDINGS_MODEL=BAAI/bge-base-en-v1.5
+OCEAN_EMBEDDINGS_DIMENSIONS=768
+
+# Vector Search Configuration
+OCEAN_VECTOR_SIMILARITY_THRESHOLD=0.7
+OCEAN_VECTOR_SEARCH_LIMIT=10
+
+# Table Configuration
+# Ocean uses NoSQL tables for flexible schema-less storage
+OCEAN_TABLE_PAGES=ocean_pages
+OCEAN_TABLE_BLOCKS=ocean_blocks
+OCEAN_TABLE_BLOCK_LINKS=ocean_block_links
+OCEAN_TABLE_TAGS=ocean_tags
+
+# Feature Flags
+OCEAN_ENABLE_VECTOR_SEARCH=true
+OCEAN_ENABLE_SEMANTIC_LINKS=true
+OCEAN_ENABLE_AI_SUGGESTIONS=true
+
+# =============================================================================
 # Email Service Configuration (Issue #138)
 # =============================================================================
 # Email Provider: smtp, sendgrid, ses, resend
