Add ZeroDB configuration and verification documentation
- Added comprehensive ZeroDB configuration to .env.example
- Created ZERODB_TABLES_VERIFICATION.md with complete table details
- Documented all 4 tables with schemas and indexes
- Added environment variables for embeddings and vector search
- Verified tables exist in ZeroDB project

Tables verified:
- ocean_pages (01594ba1-d4f6-4399-a9c0-bb7a408abd8d)
- ocean_blocks (7ad43428-e47a-4912-a451-db73dee39bcc)
- ocean_block_links (e286019c-3194-4fe3-8e7d-c1a6b85b108f)
- ocean_tags (544957d9-bb5f-4ad0-8592-79309bba20ed)

Refs #2

--- a/.env.example
+++ b/.env.example
@@ -191,3 +191,34 @@ RELOAD=false
 
 # Number of workers (production)
 WORKERS=4
+
+# =============================================================================
+# ZeroDB Configuration (Ocean Backend Data Storage)
+# =============================================================================
+# Get these from your ZeroDB project dashboard or Issue #1 agent
+# ZeroDB provides NoSQL tables, vector search, and embeddings for Ocean
+
+# ZeroDB Project Credentials
+ZERODB_PROJECT_ID=your-zerodb-project-id-here
+ZERODB_API_KEY=your-zerodb-api-key-here
+
+# ZeroDB API Configuration
+ZERODB_API_URL=https://api.ainative.studio/v1
+ZERODB_TIMEOUT=30
+
+# ZeroDB Tables (Created by scripts/setup_tables.py)
+# These table IDs are auto-generated when tables are created
+ZERODB_TABLE_OCEAN_PAGES=ocean_pages
+ZERODB_TABLE_OCEAN_BLOCKS=ocean_blocks
+ZERODB_TABLE_OCEAN_BLOCK_LINKS=ocean_block_links
+ZERODB_TABLE_OCEAN_TAGS=ocean_tags
+
+# ZeroDB Embeddings Configuration
+# Using BAAI/bge-base-en-v1.5 (768 dimensions) for semantic search
+ZERODB_EMBEDDING_MODEL=BAAI/bge-base-en-v1.5
+ZERODB_EMBEDDING_DIMENSIONS=768
+
+# Vector Search Configuration
+ZERODB_VECTOR_NAMESPACE=ocean-backend
+ZERODB_SEARCH_THRESHOLD=0.7
+ZERODB_SEARCH_LIMIT=10
